--- a/index.html
+++ b/index.html
@@ -145,6 +145,23 @@ body {
 
 <div class="main">
 
+<!-- ===== AVISO ===== -->
+<div style="
+  background:#fff3cd;
+  border:1px solid #ffeeba;
+  color:#856404;
+  padding:14px 18px;
+  border-radius:8px;
+  margin-bottom:30px;
+  font-weight:600;
+  text-align:center;
+">
+⚠️ <strong>Em construção – sem valor legal</strong>
+</div>
+
+  <h2>Requerimento Eletrônico </h2>
+
+  
 <!-- ===== TEXTO INSTITUCIONAL ===== -->
 <div class="datas">
 <strong>REQUERIMENTO ELETRÔNICO PARA ATENDIMENTO DE DEMANDAS DISCENTES</strong><br>
