--- a/index.html
+++ b/index.html
@@ -281,9 +281,10 @@ body {
     class="logo logo-ufsj"
     src="https://raw.githubusercontent.com/ceciaUFSJ/gerador-planos/main/ufsjbco.png"
     alt="Universidade Federal de São João del-Rei – UFSJ"
-    style="height: 110%;"
+    style="transform: scale(1.1); transform-origin: left center;"
   >
 </a>
+      
 
       <div class="title">
         <h1 class="course">Engenharia da Computação e Inteligência Artificial</h1>
